--- a/custom_components/xiaomi_tv/manifest.json
+++ b/custom_components/xiaomi_tv/manifest.json
@@ -4,7 +4,7 @@
     "version": "1.0.0",
     "documentation": "https://github.com/shaonianzhentan/xiaomi_tv",
     "requirements": [
-        "pymitv==1.5.0"
+        "icmplib==3.0"
     ],
     "codeowners": [
         "@simse"
