增加唯一ID，方法用户修改名称

--- a/custom_components/xiaomi_tv/manifest.json
+++ b/custom_components/xiaomi_tv/manifest.json
@@ -7,7 +7,7 @@
         "icmplib==3.0"
     ],
     "codeowners": [
-        "@simse"
+        "@shaonianzhentan"
     ],
     "iot_class": "assumed_state"
 }
