修复无法打开应用的问题

--- a/blueprints/xiaomi_on.yaml
+++ b/blueprints/xiaomi_on.yaml
@@ -20,5 +20,6 @@ blueprint:
 trigger:
   - platform: state
     entity_id: !input media_entity
-    to: 'on'
+    from: unavailable
+    to: idle
 action: !input 'tv_on'
