--- a/blueprints/homekit_tv_remote.yaml
+++ b/blueprints/homekit_tv_remote.yaml
@@ -11,6 +11,7 @@ blueprint:
       selector:
         entity:
           domain: media_player
+          device_class: tv
     remote_entity:
       name: 遥控器
       description: 小米电视遥控器
