--- a/custom_components/xiaomi_tv/manifest.json
+++ b/custom_components/xiaomi_tv/manifest.json
@@ -1,9 +1,11 @@
 {
     "domain": "xiaomi_tv",
     "name": "\u5C0F\u7C73\u7535\u89C6",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "documentation": "https://github.com/shaonianzhentan/xiaomi_tv",
-    "requirements": [],
+    "requirements": [
+        "adb-shell[async]==0.4.0"
+    ],
     "codeowners": [
         "@shaonianzhentan"
     ],
