--- a/custom_components/xiaomi_tv/manifest.json
+++ b/custom_components/xiaomi_tv/manifest.json
@@ -2,6 +2,7 @@
     "domain": "xiaomi_tv",
     "name": "\u5C0F\u7C73\u7535\u89C6",
     "version": "1.2.0",
+    "config_flow": true,
     "documentation": "https://github.com/shaonianzhentan/xiaomi_tv",
     "requirements": [
         "adb-shell[async]==0.4.0"
