--- a/custom_components/xiaomi_tv/services.yaml
+++ b/custom_components/xiaomi_tv/services.yaml
@@ -3,6 +3,7 @@ adb_command:
   description: 发送命令到小米电视
   fields:
     entity_id:
+      name: Entity ID
       description: 小米电视
       required: true
       selector:
@@ -21,6 +22,7 @@ send_key:
   description: 使用遥控器按键控制小米电视
   fields:
     entity_id:
+      name: Entity ID
       description: 小米电视
       required: true
       selector:
@@ -29,7 +31,7 @@ send_key:
           domain: media_player
     key:
       name: Key
-      description: 按键名称
+      description: 按键名称，连续发送：以逗号分隔【up,down,left,right】，自定义延时：连接线加秒数【up-3,down-2,left-4,right】
       required: true
       example: "enter"
       selector:
